#820: Added Party Alias object and queries