@@ -17,66 +17,75 @@
 package com.echothree.control.user.party.server.command;
 
 import com.echothree.control.user.party.common.form.GetPartyAliasesForm;
-import com.echothree.control.user.party.common.result.GetPartyAliasesResult;
 import com.echothree.control.user.party.common.result.PartyResultFactory;
 import com.echothree.control.user.party.server.command.util.PartyAliasUtil;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
+import com.echothree.model.control.party.server.logic.PartyLogic;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.party.server.entity.Party;
+import com.echothree.model.data.party.server.entity.PartyAlias;
+import com.echothree.model.data.party.server.factory.PartyAliasFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetPartyAliasesCommand
-        extends BaseSimpleCommand<GetPartyAliasesForm> {
+        extends BaseMultipleEntitiesCommand<PartyAlias, GetPartyAliasesForm> {
     
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("PartyName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetPartyAliasesCommand */
     public GetPartyAliasesCommand(UserVisitPK userVisitPK, GetPartyAliasesForm form) {
-        super(userVisitPK, form, new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        super(userVisitPK, form, new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(PartyAliasUtil.getInstance().getSecurityRoleGroupNameByPartySpec(form), SecurityRoles.List.name())
-                        )))
-                ))), FORM_FIELD_DEFINITIONS, false);
+                ))
+        )), FORM_FIELD_DEFINITIONS, false);
     }
-    
+
+    Party party;
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<PartyAlias> getEntities() {
         var partyControl = Session.getModelController(PartyControl.class);
-        GetPartyAliasesResult result = PartyResultFactory.getGetPartyAliasesResult();
-        String partyName = form.getPartyName();
-        Party party = partyControl.getPartyByName(partyName);
 
-        if(party != null) {
-            UserVisit userVisit = getUserVisit();
+        party = PartyLogic.getInstance().getPartyByName(this, form.getPartyName());
 
-            result.setParty(partyControl.getPartyTransfer(userVisit, party));
-            result.setPartyAliases(partyControl.getPartyAliasTransfersByParty(userVisit, party));
-        } else {
-            addExecutionError(ExecutionErrors.UnknownPartyName.name(), partyName);
+        return hasExecutionErrors() ? null : partyControl.getPartyAliasesByParty(party);
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<PartyAlias> entities) {
+        var result = PartyResultFactory.getGetPartyAliasesResult();
+
+        if(entities != null) {
+            var partyControl = Session.getModelController(PartyControl.class);
+
+            if(session.hasLimit(PartyAliasFactory.class)) {
+                result.setPartyAliasCount(partyControl.countPartyAliasesByParty(party));
+            }
+
+            result.setParty(partyControl.getPartyTransfer(getUserVisit(), party));
+            result.setPartyAliases(partyControl.getPartyAliasTransfers(getUserVisit(), entities));
         }
 
         return result;
     }
-    
+
 }
